# OC_P15_PaceRunner

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
backend/: README.md
backend/app/: config.py  main.py
backend/app/adapters/: coros_activities.py  coros_athlete.py  coros_client.py  coros_mock.py  coros_token_store.py  gpx_parser.py  llm_openai.py  open_meteo.py  open_topo_data.py  prediction_repo.py
backend/app/api/: routes.py  security.py
backend/app/db/: __main__.py  calibration.py  engine.py  history.py  models.py  read_models.py
backend/app/domain/: models.py  ports.py
backend/app/evaluation/: __main__.py  fixtures.py  runner.py
backend/app/prompts/: strategy_system.py
backend/app/services/: baseline_strategy.py  calibration_compute.py  calibration_service.py  course_profile.py  strategy_generation.py  strategy_guardrails.py  strategy_metrics.py  strategy_quality.py  strategy_service.py
backend/migrations/: env.py
backend/migrations/versions/: 368f458d3213_prediction_runs.py  b2f1a7c4d9e0_coros_activities_calibration.py  c3a9e2b1f0d4_prediction_runs_calibration_used.py
backend/tests/: conftest.py  test_athlete_endpoint.py  test_baseline_strategy.py  test_calibration_compute.py  test_calibration_endpoint.py  test_calibration_heat.py  test_calibration_service.py  test_config.py  test_coros_activities.py  test_coros_athlete.py  test_coros_client.py  test_db_engine.py  test_e2e_strategy.py  test_evaluation.py  test_front_api_client.py  test_front_history_client.py  test_front_preview_client.py  test_front_viz.py  test_gpx_parser.py  test_health.py  test_history_endpoints.py  test_llm_openai.py  test_models.py  test_open_meteo.py  test_open_topo_data.py  test_prediction_repo.py  test_section_narrative.py  test_security.py  test_strategy_endpoint.py  test_strategy_generation.py  test_strategy_guardrails.py  test_strategy_quality.py
docs/: 01-cadrage-besoins.md  02-audit-data.md  03-solution-technique.md  rapport-conduite-projet.md
front/: Home.py  api_client.py  app.py  state.py  viz.py
front/pages/: 0_Données_COROS.py  1_Historique.py  2_Monitoring.py
spike/: coros_auth.py  coros_debug.py  coros_last_session.py  coros_raw.py  coros_sdk_test.py  main.py  pyproject.toml
