[project]
name = "pacerunner"
version = "0.1.0"
description = "PaceRunner — stratégies de course prédictives (backend FastAPI + front Streamlit)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "gpxpy>=1.6.2",
    "numpy>=2.4.6",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["backend/app", "backend/tests"]

[[tool.mypy.overrides]]
module = ["gpxpy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["backend"]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
